--- a/css/main.css
+++ b/css/main.css
@@ -20,12 +20,58 @@
 
 @charset "UTF-8";
 
+
 body {
   margin: 0;
   padding: 0;
 }
 
+
 #map {
+  width: 100vw;
+  height: 100vh;
+}
+
+
+#streetviewContainer {
+  z-index: 1000;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100vw;
+  height: 100vh;
+
+  visibility: hidden;
+}
+
+#streetviewContainer #back {
+  z-index: 2;
+
+  position: absolute;
+  top: 10px;
+  left: 10px;
+
+  font-size: 45px;
+  color: lightgrey;
+  background-color: rgba(0, 0, 0, 0.5);
+
+  padding: 5px 10px;
+  border-radius: 1px;
+}
+#streetviewContainer #back:hover,
+#streetviewContainer #back:focus {
+  cursor: pointer;
+}
+
+#streetviewContainer #streetview {
+  z-index: 1;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
   width: 100vw;
   height: 100vh;
 }
