--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,14 @@
 @charset "UTF-8";
 
 
+html {
+  height: -webkit-fill-available;
+}
+
 body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+
   margin: 0;
   padding: 0;
 }
@@ -29,8 +36,8 @@ body {
 
 #map {
   width: 100vw;
-  height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 
@@ -42,7 +49,8 @@ body {
   left: 0;
 
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 
   visibility: hidden;
 }
@@ -74,5 +82,6 @@ body {
   left: 0;
 
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
