--- a/lib/leaflet.routing.machine/leaflet.routing.machine.css
+++ b/lib/leaflet.routing.machine/leaflet.routing.machine.css
@@ -2,6 +2,7 @@
     width: 320px;
     background-color: white;
     padding-top: 4px;
+    padding-bottom: 26px;
     transition: all 0.2s ease;
     box-sizing: border-box;
 }
@@ -253,8 +254,8 @@
     .leaflet-routing-container {
         margin: 0 !important;
         padding: 0 !important;
-        width: 100%;
-        height: 100%;
+        /*width: 100%;
+        height: 100%;*/
     }
 }
 
