--- a/lib/leaflet.routing.machine/leaflet.routing.machine.css
+++ b/lib/leaflet.routing.machine/leaflet.routing.machine.css
@@ -253,9 +253,7 @@
 @media only screen and (max-width: 640px) {
     .leaflet-routing-container {
         margin: 0 !important;
-        padding: 0 !important;
-        /*width: 100%;
-        height: 100%;*/
+        /*padding: 0 !important;*/
     }
 }
 
