--- a/lib/leaflet.routing.machine/leaflet.routing.machine.css
+++ b/lib/leaflet.routing.machine/leaflet.routing.machine.css
@@ -252,7 +252,7 @@
 
 @media only screen and (max-width: 640px) {
     .leaflet-routing-container {
-        margin: 0 !important;
+        /*margin: 0 !important;*/
         /*padding: 0 !important;*/
     }
 }
